Support dark mode - Missing change - Issue:74702

--- a/src/components/conversational-designer/conversational-designer.scss
+++ b/src/components/conversational-designer/conversational-designer.scss
@@ -49,15 +49,15 @@ body {
 }
 
 .FlowsContainer::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px var(--element-background-color);
-  box-shadow: inset 0 0 6px var(--element-background-color);
+  -webkit-box-shadow: inset 0 0 6px var(--gray-01);
+  box-shadow: inset 0 0 6px var(--gray-01);
   border-radius: 5px;
 }
 
 .FlowsContainer::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px var(--selection-color);
-  box-shadow: inset 0 0 6px var(--selection-color);
+  -webkit-box-shadow: inset 0 0 6px var(--color-on-secondary);
+  box-shadow: inset 0 0 6px var(--color-on-secondary);
 }
 
 .svgIcon{
